// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiEnumSelectRenderer.vue > with enum schema > should render component and match snapshot 1`] = `
"<div class="v-application v-theme--light v-layout v-layout--full-height v-locale--is-ltr">
  <div class="v-application__wrap">
    <div class="control" id="#8">
      <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-input--dirty v-text-field v-select v-select--chips v-select--multiple v-select--selected input">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--active v-field--appended v-field--center-affix v-field--dirty v-field--variant-filled v-theme--light v-locale--is-ltr" role="combobox" aria-haspopup="listbox" aria-expanded="false" aria-controls="menu-v-1" aria-owns="menu-v-1">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator=""><label class="v-label v-field-label v-field-label--floating" aria-hidden="false" for="#8-input">
                <!---->My Multi Select
              </label><label class="v-label v-field-label" id="#8-input-label" aria-hidden="true">
                <!---->My Multi Select
              </label>
              <!---->
              <div class="v-field__input" data-no-activator=""><select multiple="" hidden="">
                  <option selected="" value="a"></option>
                  <option value="b"></option>
                  <option value="c"></option>
                </select>
                <!---->
                <!---->
                <div class="v-select__selection"><span class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal" draggable="false"><!----><span class="v-chip__underlay"></span>
                  <!---->
                  <!---->
                  <div class="v-chip__content" data-no-activator="">a</div>
                  <!----><button class="v-chip__close" type="button" data-testid="close-chip" aria-label="Close"><i class="mdi-close-circle mdi v-icon notranslate v-theme--light v-icon--size-x-small" aria-hidden="true"></i></button></span>
                </div><input size="1" role="combobox" type="text" aria-labelledby="#8-input-label" id="#8-input" aria-describedby="#8-input-messages" inputmode="none" aria-expanded="false" aria-controls="menu-v-1" value="a">
              </div>
              <!---->
            </div>
            <transition-stub name="expand-x-transition" appear="false" persisted="false" css="true">
              <div class="v-field__clearable"><i class="mdi-close-circle mdi v-icon notranslate v-theme--light v-icon--size-default v-icon--clickable" role="button" aria-hidden="false" tabindex="-1" aria-label="Clear My Multi Select"></i></div>
            </transition-stub>
            <div class="v-field__append-inner">
              <!----><i class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-select__menu-icon" aria-hidden="true"></i>
              <!---->
            </div>
            <div class="v-field__outline">
              <!---->
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <div id="#8-input-messages" class="v-input__details" role="alert" aria-live="polite">
          <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
            <!---->
          </transition-group-stub>
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`MultiEnumSelectRenderer.vue > with oneOf schema > should render component and match snapshot 1`] = `
"<div class="v-application v-theme--light v-layout v-layout--full-height v-locale--is-ltr">
  <div class="v-application__wrap">
    <div class="control" id="#14">
      <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-input--dirty v-text-field v-select v-select--chips v-select--multiple v-select--selected input">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--active v-field--appended v-field--center-affix v-field--dirty v-field--variant-filled v-theme--light v-locale--is-ltr" role="combobox" aria-haspopup="listbox" aria-expanded="false" aria-controls="menu-v-1" aria-owns="menu-v-1">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator=""><label class="v-label v-field-label v-field-label--floating" aria-hidden="false" for="#14-input">
                <!---->My OneOf Multi Select
              </label><label class="v-label v-field-label" id="#14-input-label" aria-hidden="true">
                <!---->My OneOf Multi Select
              </label>
              <!---->
              <div class="v-field__input" data-no-activator=""><select multiple="" hidden="">
                  <option value="a"></option>
                  <option selected="" value="b"></option>
                  <option value="c"></option>
                </select>
                <!---->
                <!---->
                <div class="v-select__selection"><span class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal" draggable="false"><!----><span class="v-chip__underlay"></span>
                  <!---->
                  <!---->
                  <div class="v-chip__content" data-no-activator="">Option B</div>
                  <!----><button class="v-chip__close" type="button" data-testid="close-chip" aria-label="Close"><i class="mdi-close-circle mdi v-icon notranslate v-theme--light v-icon--size-x-small" aria-hidden="true"></i></button></span>
                </div><input size="1" role="combobox" type="text" aria-labelledby="#14-input-label" id="#14-input" aria-describedby="#14-input-messages" inputmode="none" aria-expanded="false" aria-controls="menu-v-1" value="Option B">
              </div>
              <!---->
            </div>
            <transition-stub name="expand-x-transition" appear="false" persisted="false" css="true">
              <div class="v-field__clearable"><i class="mdi-close-circle mdi v-icon notranslate v-theme--light v-icon--size-default v-icon--clickable" role="button" aria-hidden="false" tabindex="-1" aria-label="Clear My OneOf Multi Select"></i></div>
            </transition-stub>
            <div class="v-field__append-inner">
              <!----><i class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-select__menu-icon" aria-hidden="true"></i>
              <!---->
            </div>
            <div class="v-field__outline">
              <!---->
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <div id="#14-input-messages" class="v-input__details" role="alert" aria-live="polite">
          <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
            <!---->
          </transition-group-stub>
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>"
`;
